--- a/layouts/index.html
+++ b/layouts/index.html
@@ -55,7 +55,7 @@
         "description": "Онлайн консультации психолога. Лечение тревожности, панических атак методом когнитивно-поведенческой терапии (КПТ).",
         "url": "{{ .Site.BaseURL }}",
         "telephone": "+905071754633",
-        "email": "natalia.prokofeva.therapy@gmail.com",
+        "email": "kseniya.parvatkina.therapy@gmail.com",
         "address": {
           "@type": "PostalAddress",
           "addressCountry": "RU"
