--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -21,11 +21,11 @@
             </a>
           </li>
           <li>
-            <a href="mailto:contact@example.com" class="footer__link">
+            <a href="mailto:kseniya.parvatkina.therapy@gmail.com" class="footer__link">
               <svg class="footer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
               </svg>
-              contact@example.com
+              kseniya.parvatkina.therapy@gmail.com
             </a>
           </li>
         </ul>
