--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -21,10 +21,7 @@
         </ul>
 
         <div class="pricing-card__cta">
-          <a href="tg://resolve?domain=happy_habits_ru&text={{ urlquery "Здравствуйте! Хочу записаться на разовую сессию (60 минут, 5000₽)" }}"
-             class="btn btn--outline"
-             data-cta="telegram"
-             data-position="pricing-single">
+          <a href="#cta-final" class="btn btn--outline">
             Записаться
           </a>
         </div>
@@ -52,10 +49,7 @@
         </ul>
 
         <div class="pricing-card__cta">
-          <a href="tg://resolve?domain=happy_habits_ru&text={{ urlquery "Здравствуйте! Хочу купить пакет 10 сессий (45000₽)" }}"
-             class="btn btn--primary"
-             data-cta="telegram"
-             data-position="pricing-package">
+          <a href="#cta-final" class="btn btn--primary">
             Купить пакет
           </a>
         </div>
