--- a/layouts/partials/benefits.html
+++ b/layouts/partials/benefits.html
@@ -35,7 +35,7 @@
       </div>
       <p class="method-description">
         Доказанная эффективность в лечении тревожных расстройств.
-        <strong>7-8 из 10 клиентов</strong> достигают значительного улучшения за 8-12 сессий.
+        <strong>8 из 10 клиентов</strong> достигают значительного улучшения за 8-12 сессий.
       </p>
     </div>
   </div>
