--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -3,7 +3,7 @@
     <div class="hero__content">
       <h1 class="hero__title">Освободитесь от тревоги за 8-12 сессий по доказательному методу</h1>
 
-      <p class="hero__subtitle">7-8 из 10 клиентов значительно снижают уровень тревоги уже через 2 месяца</p>
+      <p class="hero__subtitle">8 из 10 клиентов значительно снижают уровень тревоги уже через 2 месяца</p>
 
       <div class="hero__badges">
         <span class="badge">Конфиденциально</span>
@@ -12,9 +12,7 @@
       </div>
 
       <div class="hero__cta">
-        <a href="#cta-final"
-           class="btn btn--primary"
-           aria-label="Записаться на бесплатную диагностику">
+        <a href="#cta-final" class="btn btn--primary" aria-label="Записаться на бесплатную диагностику">
           Записаться на бесплатную диагностику
         </a>
       </div>
